--- a/assets/scss/assets/_slider.scss
+++ b/assets/scss/assets/_slider.scss
@@ -13,7 +13,26 @@
   }
 }
 
+.mySwiper-navigatie-section {
 
+
+
+  .swiper-button-next {
+    &:after {
+      content: url(/wp-content/themes/freekvonk/img/icon/next-nav.svg);
+      height: 61px;
+    }
+  }
+
+  .swiper-button-prev {
+
+
+    &:after {
+      content: url(/wp-content/themes/freekvonk/img/icon/prev-nav.svg);
+      height: 61px;
+    }
+  }
+}
 
 
 .swiper-section {
@@ -25,10 +44,7 @@
     .swiper-slide-active {
       opacity: 1;
     }
-
-
   }
-
 }
 
 
@@ -40,7 +56,7 @@
   .swiper-button-next {
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
     display: block;
     right: 30px;
     z-index: 100;
@@ -61,7 +77,7 @@
     position: absolute;
     z-index: 100;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateY(-50%);
     left: 30px;
 
     &:after {
@@ -114,7 +130,7 @@
     width: fit-content;
     right: unset;
 
-    // media query
+
 
     @media (min-width: 1280px) {
       left: calc(50% + 136px);
@@ -131,8 +147,42 @@
         background-color: #fff;
       }
     }
+
+
   }
 
+  &.black-slider {
+    .swiper-pagination-bullet {
+      background-color: transparent;
+      border: 1px solid #2B2828;
+      opacity: 1;
+      width: 7px;
+      height: 7px;
+
+      &.swiper-pagination-bullet-active {
+        background-color: #2B2828;
+      }
+    }
+
+    .swiper-button-next-over-freek {
+
+
+      &:after {
+        content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="30.702" height="27.867" viewBox="0 0 30.702 27.867"><g id="Group_768" data-name="Group 768" transform="translate(1.5 2.317)"><line id="Line_35" data-name="Line 35" x2="25.108" transform="translate(0 11.616)" fill="none" stroke="%23000" stroke-linecap="round" stroke-width="3"/><line id="Line_36" data-name="Line 36" x2="14.967" y2="1.461" transform="translate(16.302 0) rotate(45)" fill="none" stroke="%23000" stroke-linecap="round" stroke-width="3"/><line id="Line_37" data-name="Line 37" y1="1.461" x2="14.967" transform="translate(26.885 12.649) rotate(135)" fill="none" stroke="%23000" stroke-linecap="round" stroke-width="3"/></g></svg>');
+      }
+    }
+
+    .swiper-button-prev-over-freek {
+
+      @media (max-width: 1279px) {
+        &:after {
+          content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="30.703" height="27.867" viewBox="0 0 30.703 27.867"><g id="Group_1098" data-name="Group 1098" transform="translate(29.203 25.55) rotate(180)"><line id="Line_35" data-name="Line 35" x2="25.108" transform="translate(0 11.616)" fill="none" stroke="%23000" stroke-linecap="round" stroke-width="3"/><line id="Line_36" data-name="Line 36" x2="14.967" y2="1.461" transform="translate(16.302 0) rotate(45)" fill="none" stroke="%23000" stroke-linecap="round" stroke-width="3"/><line id="Line_37" data-name="Line 37" y1="1.461" x2="14.967" transform="translate(26.885 12.649) rotate(135)" fill="none" stroke="%23000" stroke-linecap="round" stroke-width="3"/></g></svg>');
+        }
+      }
+
+
+    }
+  }
 
   .swiper-button-next-over-freek,
   .swiper-button-prev-over-freek {
